--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
+Django==1.9
+djangorestframework==3.5.3
+express==1.0
+jade==0.0.4
+nodejs==0.1.1
+oauthlib==2.0.1
+optional-django==0.1.0
+Pillow==3.4.2
+psycopg2==2.6.2
+Pygments==2.1.3
+PyJWT==1.4.2
+python-openid==2.2.5
+python-social-auth==0.2.21
+requests==2.12.1
+requests-oauthlib==0.7.0
+six==1.10.0
 entorno2
 Django==1.6.6
 psycopg2==2.6.2
